--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -13,17 +13,16 @@
     %button.w-3.h-3.rounded-full{"aria-current" => "true", "aria-label" => "Slide 1", "data-carousel-slide-to" => "0", :type => "button"}
     %button.w-3.h-3.rounded-full{"aria-current" => "false", "aria-label" => "Slide 2", "data-carousel-slide-to" => "1", :type => "button"}
 - @products.each do |product|
-  %div
-    .w-full.max-w-sm.mx-auto.bg-white
+  %div.max-w-sm.mx-auto.bg-white.shadow-lg.rounded-lg.overflow-hidden
+    .relative
       - if product.product_image.attached?
-        = image_tag(product.image_webp,width:300,height:300)
-      .py-3.pb-5
-        = link_to product.name,root_path,class:"text-md font-bold hover:font-extrabold tracking-tight"
-        .flex.items-center.justify-between
-          %span.text-lg.font-bold.text-sky-500
-            PHP#{product.price}
-          =link_to "Add to cart", product_path(product.id)
-          -# <a href="#" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Add to cart</a>
+        = image_tag(product.image_webp, class: "w-full h-full object-cover")
+    .p-4
+      %h2.text-lg.font-bold.text-gray-800
+        =product.name  
+      .mt-2.flex.items-center
+        %span.text-2xl.font-bold.text-sky-500
+          =number_to_currency(product.price, unit: "PHP ") 
 %footer{:class => "bg-[#06032C]"}
   .mx-auto.w-full.max-w-screen-2xl.p-4.py-6.lg:py-8
     .md:flex.md:justify-between
