--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -32,8 +32,9 @@
         .flex.item-center.justify-start.space-x-5
           = image_tag asset_url("flarego-shop-logo.png")
         %div{:class => "w-1/3"}
-          = form_with do |form|
-            = form.text_field :name,placeholder: "Find products", class: "w-full peer z-[21] px-6 py-4 rounded-2xl outline-none duration-200 ring-2 ring-[transparent] focus:ring-[#11BE86]"
+          =form_tag search_products_path,method: :get, role: "search" do
+            =text_field_tag :search, params[:search], placeholder: "Find products", class: "w-full peer z-[21] px-6 py-4 rounded-2xl outline-none duration-200 ring-2 ring-[transparent] focus:ring-[#11BE86]"
+    
         .flex.justify-end.items-center.space-x-2.text-white
           = icon('fa-solid', 'user',class:"text-[#BBB6FF]")
           -if user_signed_in?
