--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,24 +1,36 @@
-.max-w-6xl.mx-auto.px-4.sm:px-6.lg:px-8.py-8
-  .flex.flex-col.md:flex-row.-mx-4
-    .md:flex-1.px-4
-      .product-wrapper
-        -if @product.product_image.attached?
-          = image_tag(@product.image_webp, class: "w-full h-full object-cover")
-      
-
-    .md:flex-1.px-4
-      .text-4xl.font-bold.text-gray-800.mb-2
-        = @product.name
-      .text-sky-500.text-lg.mb-4.font-bold.leading-8
-        =number_to_currency(@product.price, :unit=>"PHP ")
-      .text-gray-600.text-sm.mt-2
-        =@product.description 
-      %hr.h-px.my-8.bg-gray-200.border-0.dark:bg-gray-700/
-      .flex.-mx-2.mb-4
-        .px-2{class:"w-1/2"}
-          = button_to "Add to cart", add_to_cart_cart_path(product_id: @product.id), method: :post, class:"btn-cta rounded-xl"  
-          =link_to "Write a review",new_product_review_path(@product)
--@reviews.each do |r|
-  =r.user_id
-  =r.subject
-  =r.content
+.container.mx-auto.px-4.py-8.space-y-3 
+  .flex.flex-col.md:flex-row.gap-8
+    %div{class:"md:w-1/2"}
+      .flex.gap-4
+        %div{class:"w-1/5"}
+          -[1,2,3].each do |_p|
+            .thumbnail-wrapper
+              -if @product.product_image.attached?
+                = image_tag(@product.image_webp, class: "w-full h-full object-cover")
+        %div{class:"w-4/5"}
+          .product-wrapper
+            -if @product.product_image.attached?
+              = image_tag(@product.image_webp, class: "w-full h-full object-cover")
+    %div{class:"md:w-1/2"}
+      .flex.justify-between.items-start
+        %h1.text-3xl.font-bold.text-indigo-900 
+          =@product.name
+      .flex.items-center.mt-2
+        %span.ml-2.text-sm.text-gray-600
+          -if @product.reviews.count >= 0
+            %span.ml-2.text-sm.text-gray-600
+              =@product.reviews.count
+          -else
+            %span.ml-2.text-sm.text-gray-600
+              =0    
+      .mt-4
+        .text-3xl.font-bold.text-cyan-500
+          =number_to_currency(@product.price, unit: "PHP ") 
+      .mt-6
+        .text-xl.font-semibold.mb-2
+          =@product.description
+      .mt-8
+        =link_to "Add to cart", add_to_cart_cart_path(product_id: @product.id), class: "btn-cta"  
+  .grid.md:grid-cols-2.gap-8
+    %div
+      %h2.text-2xl.font-bold.mb-4 Write a review
