--- a/app/views/carts/_cart_items.html.haml
+++ b/app/views/carts/_cart_items.html.haml
@@ -1,44 +1,40 @@
-.lg:flex.lg:items-start
-    .mx-auto.w-full.flex-none.lg:max-w-2xl.xl:max-w-4xl
-        .overflow-x-auto
-            %table.w-full.min-w-max.table-auto.text-left
-                %thead
-                    %tr
-                        %th.border-y.border-gray-100.p-4
-                            %p.block.antialiased.font-sans.text-md.text-gray-900.font-bold.leading-none.opacity-50 Product
-                        %th.border-y.border-gray-100.p-4
-                            %p.block.antialiased.font-sans.text-md.text-gray-900.font-bold.leading-none.opacity-50 Quantity
-                        %th.border-y.border-gray-100.p-4
-                            %p.block.antialiased.font-sans.text-md.text-gray-900.font-bold.leading-none.opacity-50 Price
-                        %th.border-y.border-gray-100.p-4
-                            %p.block.antialiased.font-sans.text-md.text-gray-900.font-bold.leading-none.opacity-50 Subtotal
-                %tbody
-                    -@cart_items.each do |cart|
-                        %tr
-                            %td.p-4.border-b.border-gray-200
-                                .flex.items-center
-                                    -if cart.product.product_image.attached?
-                                        =image_tag(cart.product.product_image, width:100, height:100)
-
-                                    .flex.flex-col.items-start    
-                                        %p.block.antialiased.text-md.font-bold 
-                                        =cart.product.name  
-                                        =link_to "X Remove", remove_from_cart_cart_path(@cart, product_id: cart.product.id)
-                                                
-                            %td.p-4.border-b.border-gray-200
-                                .inline-flex.rounded-md.shadow-md{role: "group"}
-                                    =link_to "-", reduce_quantity_cart_path(@cart, product_id: cart.product.id), method: :patch, class: "px-4 py-2 text-md font-md text-gray-900 border rounded-s-lg hover:text-blue-700"
-                                    %span.px-4.py-2.text-md.font-md.text-gray-900.border.hover:text-blue-700
-                                        =cart.quantity
-                                    =link_to "+", add_quantity_cart_path(@cart, product_id: cart.product.id),method: :patch, class: "px-4 py-2 text-md font-md text-gray-900 border rounded-e-lg hover:text-blue-700"           
-                            %td.p-4.border-b.border-gray-200
-                                %p.block.antialiased.text-md.font-bold 
-                                    =number_to_currency(cart.price, :unit=>"PHP ")
-                            %td.p-4.border-b.border-gray-200
-                                %p.block.antialiased.text-md.font-bold 
-                                    =number_to_currency(cart.subtotal, :unit=>"PHP ")   
-    .mx-auto.max-w-4xl.flex-1.lg:w-full    
-        .card-wrapper
-            %h1.text-2xl.font-bold Cart Summary
-            %h1 Subtotal
-            =number_to_currency(@cart.total, :unit=>"PHP ")    
+.container.mx-auto.p-4
+    .flex.flex-col.lg:flex-row.gap-8
+        %div.overflow-x-auto{class:"lg:w-2/3"}
+            %div{class:"min-w-[600px]"}
+                %table.w-full
+                    %thead
+                        %tr.border-b
+                            %th.text-left.py-2 Product
+                            %th.text-center.py-2 Quantity
+                            %th.text-right.py-2 Price
+                            %th.text-right.py-2 Subtotal
+                    %tbody
+                        -@cart_items.each do |cart|
+                            %tr.border-b
+                                %td.py-4
+                                    .flex.items-center
+                                        -if cart.product.product_image.attached?
+                                            =image_tag(cart.product.product_image, class:"w-20 h-20 object-cover mr-4")
+                                            %div
+                                                %h3.font-semibold
+                                                    =cart.product.name
+                                                    =link_to "X Remove", remove_from_cart_cart_path(@cart, product_id: cart.product.id), class:"text-sm text-gray-500 flex items-center mt-1"
+                                %td.py-4
+                                    .flex.items-center.justify-center
+                                        .inline-flex.rounded-md.shadow-md{role: "group"}
+                                            =link_to "-", reduce_quantity_cart_path(@cart, product_id: cart.product.id), method: :patch, class: "px-4 py-2 text-md font-md text-gray-900 border rounded-s-lg hover:text-blue-700"
+                                            %span.px-4.py-2.text-md.font-md.text-gray-900.border.hover:text-blue-700
+                                                =cart.quantity
+                                            =link_to "+", add_quantity_cart_path(@cart, product_id: cart.product.id),method: :patch, class: "px-4 py-2 text-md font-md text-gray-900 border rounded-e-lg hover:text-blue-700" 
+                                %td.py-4.text-right
+                                    =number_to_currency(cart.price, unit: "PHP ")
+                                %td.py-4.text-right
+                                    =number_to_currency(cart.subtotal, unit: "PHP ")  
+        %div{class:"lg:w-1/3"}
+            .card-wrapper
+                %h2.text-xl.font-semibold.mb-4 Cart 
+                .flex.justify-between.mb-2
+                    %span Total
+                    %span 
+                        =number_to_currency(@cart.total, unit: "PHP ")
