--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -12,53 +12,47 @@
   .absolute.z-30.flex.bottom-5.space-x-3.rtl:space-x-reverse{:class => "-translate-x-1/2 left-1/2"}
     %button.w-3.h-3.rounded-full{"aria-current" => "true", "aria-label" => "Slide 1", "data-carousel-slide-to" => "0", :type => "button"}
     %button.w-3.h-3.rounded-full{"aria-current" => "false", "aria-label" => "Slide 2", "data-carousel-slide-to" => "1", :type => "button"}
-- @products.each do |product|
-  %div.max-w-sm.mx-auto.bg-white.shadow-lg.rounded-lg.overflow-hidden
-    .relative
-      - if product.product_image.attached?
-        = image_tag(product.image_webp, class: "w-full h-full object-cover")
-    .p-4
-      %h2.text-lg.font-bold.text-gray-800
-        =product.name  
-      .mt-2.flex.items-center
-        %span.text-xl.font-bold.text-sky-500
-          =number_to_currency(product.price, unit: "PHP ") 
-          =link_to "Add to cart", product_path(product.id)
-%footer{:class => "bg-[#06032C]"}
-  .mx-auto.w-full.max-w-screen-2xl.p-4.py-6.lg:py-8
-    .md:flex.md:justify-between
-      .mb-6.md:mb-0
-        = link_to image_tag("flarego-shop-logo.png"), root_path
-        %h1.text-white.mt-5 It started with a crazy idea, and is now being used by thousands of people nationwide and in other countries.
-      .flex.items-center.flex-col.px-5
-        %h2.mb-6.text-xl.font-bold.text-gray-900.uppercase.dark:text-white Quicklinks
-        .grid.grid-cols-2.gap-8.sm:gap-6.sm:grid-cols-3
+
+.container.mx-auto.px-4.py-8
+  .grid.grid-cols-1.sm:grid-cols-2.md:grid-cols-3.lg:grid-cols-4.gap-6
+    - @products.each do |product|
+      .overflow-hidden
+        .relative
+          - if product.product_image.attached?
+            = image_tag(product.image_webp, class: "w-full h-48 object-cover")
+        .p-4 
+          %h2.text-lg.font-semibold.text-gray-800.my-3
+            =link_to product.name, product_path(product.id), class:"cursor-pointer"
+          %p.text-sm.font-semibold.text-gray-600.mb-2 All accessories included
+          .flex.items-center.mb-2
+            %span.text-lg.font-bold.text-sky-500.mr-3
+              =number_to_currency(product.price, unit: "PHP ")
+
+%footer.text-white.py-12{:class => "bg-[#06032C]"}
+  .container.mx-auto.px-4
+    .grid.grid-cols-1.md:grid-cols-2.lg:grid-cols-4.gap-8
+      %div
+        .flex.items-center.mb-4
+          = link_to image_tag("flarego-shop-logo.png"), root_path
+        %p.text-sm.text-gray-400 It started with a crazy idea, and is now being used by thousands of people nationwide and in other countries.
+      %div
+        %h3.text-lg.font-semibold.mb-4 Quicklinks
+        .grid.grid-cols-1.md:grid-cols-3.gap-8
           %div
-            %ul.text-gray-500.dark:text-gray-400.font-medium
-              %li.mb-4
-                = link_to "Home",root_path
-              %li.mb-4
-                = link_to "AdoPisoft",root_path
-              %li.mb-4
-                = link_to "DafoxTech",root_path
-          %div
-            %ul.text-gray-500.dark:text-gray-400.font-medium
-              %li.mb-4
-                = link_to "On Sale",root_path
-              %li.mb-4
-                = link_to "Blogs and Events",root_path
-              %li.mb-4
-                = link_to "FAQs",root_path
-      .flex.item-center.px-5.flex-col.space-y-3
-        %h1.font-extrabold.text-2xl.text-white NEWSLETTER
-        = form_with do |form|
-          = form.label "email address" ,class:"text-white font-bold uppercase"
-          = form.text_field :name, class: "block shadow rounded-xl border border-gray-400 outline-none px-3 py-2 mt-2 w-full"
-        = button_to "Subscribe",root_path,class:"bg-gradient-to-b from-[#00effe] to-[#0095ff] px-5 py-3 w-full rounded-xl text-white font-bold"
-    %hr.my-6.border-gray-200.sm:mx-auto.dark:border-gray-700.lg:my-8/
-    .flex.items-center.justify-between
-      %span.text-sm.text-gray-500.sm:text-center.dark:text-gray-400
-        © 2024, Flarego Online Store. Powered by Shopify.
-      .flex.mt-4.justify-center.sm:mt-0.space-x-3.items-center
-        %h1.text-sm.font-bold.text-white We accept payments via:
-        = image_tag("payment-gateway.png")
+            %ul.space-y-2
+              -["Home","DafoxTech","AdoPisoft"].each do |i|
+                %li
+                  =link_to i, root_path, class: "hover:text-cyan-400 transition-colors"
+          %div        
+            %ul.space-y-2
+              -["On Sale","Blog and Events","FAQs"].each do |i|
+                %li
+                  =link_to i, root_path, class: "hover:text-cyan-400 transition-colors"
+          %div        
+            %ul.space-y-2
+              -["On Sale","Blog and Events","FAQs"].each do |i|
+                %li
+                  =link_to i, root_path, class: "hover:text-cyan-400 transition-colors"  
+      %div
+        %h3.text-lg.font-semibold.mb-4 Newsletter
+                        
