--- a/app/views/products/search.html.haml
+++ b/app/views/products/search.html.haml
@@ -1,11 +1,14 @@
-- @products.each do |product|
-  %div.max-w-sm.mx-auto.bg-white.shadow-lg.rounded-lg.overflow-hidden
-    .relative
-      - if product.product_image.attached?
-        = image_tag(product.image_webp, class: "w-full h-full object-cover")
-    .p-4
-      %h2.text-lg.font-bold.text-gray-800
-        =product.name  
-      .mt-2.flex.items-center
-        %span.text-2xl.font-bold.text-sky-500
-          =number_to_currency(product.price, unit: "PHP ") 
+.container.mx-auto.px-4.py-8
+  - @products.each do |product|
+    .overflow-hidden
+      .relative
+        - if product.product_image.attached?
+          = image_tag(product.image_webp, class: "w-full h-48 object-cover")
+      .p-4 
+        =link_to "Add to cart", product_path(product.id), class: "btn-cta"
+        %h2.text-lg.font-semibold.text-gray-800.my-3
+          =product.name
+        %p.text-sm.font-semibold.text-gray-600.mb-2 All accessories included
+        .flex.items-center.mb-2
+          %span.text-lg.font-bold.text-sky-500.mr-3
+            =number_to_currency(product.price, unit: "PHP ")
