--- a/app/views/orders/new.html.haml
+++ b/app/views/orders/new.html.haml
@@ -4,30 +4,37 @@
             %h2.text-2xl.font-bold.mb-6.mt-8 Shipping Address
             =form_with model: @order, local:true, class: "space-y-4" do |f|
                 -unless user_signed_in?
+                    %div.grid.grid-cols-2.gap-4
+                        %div
+                            =f.label :first_name, class: "form-label"
+                            =f.text_field :first_name, class: "form-field"
+                        %div
+                            =f.label :last_name, class: "form-label"
+                            =f.text_field :last_name, class: "form-field"
                     %div
-                        =f.label :email, class: "block text-sm font-medium text-gray-700 mb-1"
-                        =f.text_field :email, class: "w-full px-3 py-2 border border-gray-300 rounded-mdshadow-sm placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-blue-500 focus:border-blue-500"
+                        =f.label :email, class: "form-label"
+                        =f.text_field :email, class: "form-field"
                 %div
-                    =f.label :city, class: "block text-sm font-medium text-gray-700 mb-1"
-                    =f.text_field :city, class: "w-full px-3 py-2 border border-gray-300 rounded-mdshadow-sm placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-blue-500 focus:border-blue-500"
+                    =f.label :city, class: "form-label"
+                    =f.text_field :city, class: "form-field"
                 %div
-                    =f.label :province, class: "block text-sm font-medium text-gray-700 mb-1"
-                    =f.text_field :province, class: "w-full px-3 py-2 border border-gray-300 rounded-mdshadow-sm placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-blue-500 focus:border-blue-500"
+                    =f.label :province, class: "form-label"
+                    =f.text_field :province,class: "form-field"
                 %div
-                    =f.label :barangay, class: "block text-sm font-medium text-gray-700 mb-1"
-                    =f.text_field :barangay, class: "w-full px-3 py-2 border border-gray-300 rounded-mdshadow-sm placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-blue-500 focus:border-blue-500"
+                    =f.label :barangay, class: "form-label"
+                    =f.text_field :barangay,class: "form-field"
                 %div
-                    =f.label :zip_code, class: "block text-sm font-medium text-gray-700 mb-1"
-                    =f.number_field :zip_code, class: "w-full px-3 py-2 border border-gray-300 rounded-mdshadow-sm placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-blue-500 focus:border-blue-500"
+                    =f.label :zip_code, class: "form-label"
+                    =f.number_field :zip_code,class: "form-field"
                 %div.grid.grid-cols-2.gap-4
                     %div
-                        =f.label :street, class: "block text-sm font-medium text-gray-700 mb-1"
-                        =f.text_field :street, class: "w-full px-3 py-2 border border-gray-300 rounded-mdshadow-sm placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-blue-500 focus:border-blue-500"
+                        =f.label :street, class: "form-label"
+                        =f.text_field :street, class: "form-field"
                     %div
-                        =f.label :house_number, class: "block text-sm font-medium text-gray-700 mb-1"
-                        =f.number_field :house_number, class: "w-full px-3 py-2 border border-gray-300 rounded-mdshadow-sm placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-blue-500 focus:border-blue-500"
+                        =f.label :house_number, class: "form-label"
+                        =f.number_field :house_number, class: "form-field"
 
-                        =f.submit "Place Order", class: "btn-cta"
+                =f.submit "Place Order", class: "btn-cta"
         %div{class: "lg:w-1/3"}
             .card-wrapper
                 %h2.text-2xl.font-bold.mb-6 Order Summary
@@ -40,6 +47,8 @@
                                     %div
                                         %h3.font-semibold 
                                             =ci.product.name
+                                        %p.font-semibold
+                                            =ci.quantity
                                 %span.font-semibold
                                     =ci.product.price
                     %hr
