--- a/app/views/orders/new.html.haml
+++ b/app/views/orders/new.html.haml
@@ -14,6 +14,10 @@
                     %div
                         =f.label :email, class: "form-label"
                         =f.text_field :email, class: "form-field"
+                    -if @show_password
+                        %div
+                            =f.label :password
+                            =f.password_field :password
                 %div
                     =f.label :city, class: "form-label"
                     =f.text_field :city, class: "form-field"
