--- a/app/views/orders/show.html.haml
+++ b/app/views/orders/show.html.haml
@@ -13,3 +13,9 @@
 =@order.city
 =@order.province
 =@order.barangay
+
+=form_with url: user_invitation_path, local: true do |f|
+    =f.label :email
+    =f.email_field :email
+    =f.hidden_field :product_id, value: @order.order_items.first.product.id
+    =f.submit "submit"
