--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -55,7 +55,7 @@
         .flex.justify-center.items-center.space-x-3.text-white
           = link_to "Home",root_path
           = link_to "DafoxTech",root_path
-          = link_to "AdoPisoft",root_path
+          = link_to "AdoPisoft",collections_adopisoft_path
           = link_to "On Sale",root_path
           = link_to "Blogs and Events",root_path
           = link_to "FAQs",root_path
