--- a/app/views/admin/products/_form.html.haml
+++ b/app/views/admin/products/_form.html.haml
@@ -17,6 +17,9 @@
     = form.label :price
     = form.text_field :price, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full"
   .my-5
+    = form.label :category_id
+    = form.collection_select :category_id, Category.all, :id, :name, prompt: "Select a category.", class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full"
+  .my-5
     = form.label :created_by_id
     = form.text_field :created_by_id, value: current_user.id, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full text-gray-500",disabled: true
   .my-5
