--- a/app/views/admin/products/index.html.haml
+++ b/app/views/admin/products/index.html.haml
@@ -22,6 +22,8 @@
                 %th.text-sm.font-medium.text-gray-800.px-6.py-4.text-left{:scope => "col"}
                   Description
                 %th.text-sm.font-medium.text-gray-800.px-6.py-4.text-left{:scope => "col"}
+                  Category
+                %th.text-sm.font-medium.text-gray-800.px-6.py-4.text-left{:scope => "col"}
                   Price
             %tbody
               - @admin_products.each do |p|
@@ -36,6 +38,8 @@
                     = link_to p.name, edit_admin_product_path(p.id || p.slug)
                   %td.px-6.py-4.whitepsace-nowrap.tex-sm.font-medium.text-gray-800
                     = p.description
+                  %td.px-6.py-4.whitepsace-nowrap.tex-sm.font-medium.text-gray-800
+                    = p.category.name
                   %td.px-6.py-4.whitespace-nowrap.tex-sm.font-medium.text-gray-800
                     PHP#{(p.price).to_s}
 
