added ph location dropdown

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -96,7 +96,7 @@ body{
     }
 
     .dafox-gradient{
-
+        @apply bg-gradient-to-r from-[#d2fff8] via-[#fefbeb] to-[#f1cac2] overflow-hidden
     }
 }
 
