--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -54,7 +54,7 @@
           %h1.text-white Categories
         .flex.justify-center.items-center.space-x-3.text-white
           = link_to "Home",root_path
-          = link_to "DafoxTech",root_path
+          = link_to "DafoxTech",collections_dafoxtech_path
           = link_to "AdoPisoft",collections_adopisoft_path
           = link_to "On Sale",root_path
           = link_to "Blogs and Events",root_path
