--- a/app/views/orders/new.html.haml
+++ b/app/views/orders/new.html.haml
@@ -15,19 +15,25 @@
                     %div
                         =f.label :email, class: "form-label"
                         =f.email_field :email,  class: "form-field"
-                -if @show_password
-                    %div
-                        =f.label :password, class: "form-label"
-                        =f.password_field :password, class: "form-field"
-                %div
-                    =f.label :city, class: "form-label"
-                    =f.text_field :city,  class: "form-field"
-                %div
-                    =f.label :province, class: "form-label"
-                    =f.text_field :province,class: "form-field"
-                %div
-                    =f.label :barangay, class: "form-label"
-                    =f.text_field :barangay,class: "form-field"
+                
+                =turbo_frame_tag :cs_select do
+                    %div{"data-controller": "form-element"}
+                        =f.button "submit", formaction: new_order_path, formmethod: :get, data: {form_element_target: "autoSubmitBtn", turbo_frame: :cs_select}
+                        -# country
+                        %div
+                            =f.label :province, class: "form-label"
+                            =f.select :province,@order.countries,{include_blank: true}, {data: {action: "change->form-element#autoSubmit"}}
+                        
+                        -# states
+                        %div
+                            =f.label :city, class: "form-label"
+                            =f.select :city, @order.states , {include_blank: true}, {data: {action: "change->form-element#autoSubmit"}}
+
+                        -# cities
+                        %div
+                            =f.label :barangay, class: "form-label"
+                            =f.select :barangay, @order.cities
+
                 %div
                     =f.label :zip_code, class: "form-label"
                     =f.number_field :zip_code, class: "form-field"
